Colaboratory를 통해 생성됨

--- a/데이터분석_300제_001_020.ipynb
+++ b/데이터분석_300제_001_020.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPnHixwYn7qat4RvgIf3+XO",
+      "authorship_tag": "ABX9TyMv0MalDUxvN2pzpHn9fWe/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/phong0104/Study_Pandas300/blob/main/%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B6%84%EC%84%9D_300%EC%A0%9C_001_020.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://wikidocs.net/155543"
+      ],
+      "metadata": {
+        "id": "OINMLCcmAOhI"
+      }
     },
     {
       "cell_type": "markdown",
